--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
 }
