--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,18 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.5.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
-}
-
-apply plugin: 'idea'
-apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+apply plugin: 'idea'
 
-group = 'com.epam.ivanou4'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+subprojects {
+    apply plugin: 'java'
 
-repositories {
-	mavenCentral()
+    tasks.withType(JavaCompile) {
+        group = 'com.epam.ivanou4'
+        version = '0.0.1-SNAPSHOT'
+        sourceCompatibility = 1.8
+    }
+
+    repositories {
+        mavenCentral()
+    }
 }
 
 
-dependencies {
-	implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
-	implementation('org.springframework.boot:spring-boot-starter-web')
-	runtimeOnly('org.springframework.boot:spring-boot-devtools')
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	testImplementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
-}
