--- a/main/build.gradle
+++ b/main/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation project(":validate")
 	implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('net.sf.dozer:dozer:5.5.1')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
